// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VDatePicker.js should match snapshot with allowed dates as array 1`] = `

<tbody>
  <tr>
    <td>
      <button type="button"
              class="btn btn--flat"
      >
        <span>
          Jan
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--flat"
      >
        <span>
          Feb
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--flat"
      >
        <span>
          Mar
        </span>
      </button>
    </td>
  </tr>
  <tr>
    <td>
      <button type="button"
              class="btn btn--flat"
      >
        <span>
          Apr
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--active accent"
      >
        <span>
          May
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--flat"
      >
        <span>
          Jun
        </span>
      </button>
    </td>
  </tr>
  <tr>
    <td>
      <button type="button"
              class="btn btn--flat"
      >
        <span>
          Jul
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--flat"
      >
        <span>
          Aug
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--flat"
      >
        <span>
          Sep
        </span>
      </button>
    </td>
  </tr>
  <tr>
    <td>
      <button type="button"
              class="btn btn--flat"
      >
        <span>
          Oct
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--flat"
      >
        <span>
          Nov
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--flat"
      >
        <span>
          Dec
        </span>
      </button>
    </td>
  </tr>
</tbody>

`;

exports[`VDatePicker.js should match snapshot with colored picker 1`] = `

<div class="picker picker--date card"
     style="height: auto;"
     data-ripple="false"
>
  <div class="picker__title primary">
    <div class="date-picker-title">
      <div class="picker__title__btn date-picker-title__year">
        2005
      </div>
      <div class="picker__title__btn date-picker-title__date active">
        <div>
          November
        </div>
      </div>
    </div>
  </div>
  <div class="picker__body">
    <div class="date-picker-header">
      <button type="button"
              class="btn btn--icon"
              data-ripple="true"
      >
        <div class="btn__content">
          <i aria-hidden="true"
             class="material-icons icon"
             style="font-size: 24px;"
          >
            chevron_left
          </i>
        </div>
      </button>
      <div class="date-picker-header__value">
        <strong class="primary--text">
          2005
        </strong>
      </div>
      <button type="button"
              class="btn btn--icon"
              data-ripple="true"
      >
        <div class="btn__content">
          <i aria-hidden="true"
             class="material-icons icon"
             style="font-size: 24px;"
          >
            chevron_right
          </i>
        </div>
      </button>
    </div>
    <div class="date-picker-table date-picker-table--month">
      <table>
        <tbody>
          <tr>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span>
                  Jan
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span>
                  Feb
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span>
                  Mar
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span>
                  Apr
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span>
                  May
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span>
                  Jun
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span>
                  Jul
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span>
                  Aug
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span>
                  Sep
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span>
                  Oct
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--active primary"
              >
                <span>
                  Nov
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span>
                  Dec
                </span>
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>

`;

exports[`VDatePicker.js should match snapshot with colored picker 2`] = `

<div class="picker picker--date card"
     style="height: auto;"
     data-ripple="false"
>
  <div class="picker__title primary">
    <div class="date-picker-title">
      <div class="picker__title__btn date-picker-title__year">
        2005
      </div>
      <div class="picker__title__btn date-picker-title__date active">
        <div>
          November
        </div>
      </div>
    </div>
  </div>
  <div class="picker__body">
    <div class="date-picker-header">
      <button type="button"
              class="btn btn--icon"
              data-ripple="true"
      >
        <div class="btn__content">
          <i aria-hidden="true"
             class="material-icons icon"
             style="font-size: 24px;"
          >
            chevron_left
          </i>
        </div>
      </button>
      <div class="date-picker-header__value">
        <strong class="orange--text text--darken-1">
          2005
        </strong>
      </div>
      <button type="button"
              class="btn btn--icon"
              data-ripple="true"
      >
        <div class="btn__content">
          <i aria-hidden="true"
             class="material-icons icon"
             style="font-size: 24px;"
          >
            chevron_right
          </i>
        </div>
      </button>
    </div>
    <div class="date-picker-table date-picker-table--month">
      <table>
        <tbody>
          <tr>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span>
                  Jan
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span>
                  Feb
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span>
                  Mar
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span>
                  Apr
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span>
                  May
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span>
                  Jun
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span>
                  Jul
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span>
                  Aug
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span>
                  Sep
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span>
                  Oct
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--active orange darken-1"
              >
                <span>
                  Nov
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span>
                  Dec
                </span>
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>

`;

exports[`VDatePicker.js should match snapshot with month formatting functions 1`] = `

<tbody>
  <tr>
    <td>
      <button type="button"
              class="btn btn--flat"
      >
        <span>
          (01)
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--flat"
      >
        <span>
          (02)
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--flat"
      >
        <span>
          (03)
        </span>
      </button>
    </td>
  </tr>
  <tr>
    <td>
      <button type="button"
              class="btn btn--flat"
      >
        <span>
          (04)
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--flat"
      >
        <span>
          (05)
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--flat"
      >
        <span>
          (06)
        </span>
      </button>
    </td>
  </tr>
  <tr>
    <td>
      <button type="button"
              class="btn btn--flat"
      >
        <span>
          (07)
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--flat"
      >
        <span>
          (08)
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--flat"
      >
        <span>
          (09)
        </span>
      </button>
    </td>
  </tr>
  <tr>
    <td>
      <button type="button"
              class="btn btn--flat"
      >
        <span>
          (10)
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--active accent"
      >
        <span>
          (11)
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--flat"
      >
        <span>
          (12)
        </span>
      </button>
    </td>
  </tr>
</tbody>

`;

exports[`VDatePicker.js should match snapshot with pick-month prop 1`] = `

<div class="picker picker--date card"
     style="height: auto;"
     data-ripple="false"
>
  <div class="picker__title primary">
    <div class="date-picker-title">
      <div class="picker__title__btn date-picker-title__year">
        2013
      </div>
      <div class="picker__title__btn date-picker-title__date active">
        <div>
          May
        </div>
      </div>
    </div>
  </div>
  <div class="picker__body">
    <div class="date-picker-header">
      <button type="button"
              class="btn btn--icon"
              data-ripple="true"
      >
        <div class="btn__content">
          <i aria-hidden="true"
             class="material-icons icon"
             style="font-size: 24px;"
          >
            chevron_left
          </i>
        </div>
      </button>
      <div class="date-picker-header__value">
        <strong class="accent--text">
          2013
        </strong>
      </div>
      <button type="button"
              class="btn btn--icon"
              data-ripple="true"
      >
        <div class="btn__content">
          <i aria-hidden="true"
             class="material-icons icon"
             style="font-size: 24px;"
          >
            chevron_right
          </i>
        </div>
      </button>
    </div>
    <div class="date-picker-table date-picker-table--month">
      <table>
        <tbody>
          <tr>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span>
                  Jan
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span>
                  Feb
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span>
                  Mar
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span>
                  Apr
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--active accent"
              >
                <span>
                  May
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span>
                  Jun
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span>
                  Jul
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span>
                  Aug
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span>
                  Sep
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span>
                  Oct
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span>
                  Nov
                </span>
              </button>
            </td>
            <td>
              <button type="button"
                      class="btn btn--flat"
              >
                <span>
                  Dec
                </span>
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>

`;
